objects/ASI_NPP_Budget_Volume__c.object
<CustomObject>
    <fields>
        <fullName>ASI_NPP_Budget_Volume__c</fullName>
        <label>Budget Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_Fiscal_Year__c</fullName>
        <label>Fiscal Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FY1415</fullName>
                </value>
                <value>
                    <fullName>FY1516</fullName>
                </value>
                <value>
                    <fullName>FY1617</fullName>
                </value>
                <value>
                    <fullName>FY1718</fullName>
                </value>
                <value>
                    <fullName>FY1819</fullName>
                </value>
                <value>
                    <fullName>FY1920</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_NPP_Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_NPP_Sub_Brand__c</fullName>
        <label>Sub-brand</label>
        <referenceTo>ASI_MFM_Sub_brand__c</referenceTo>
        <relationshipLabel>New Product / Promotion Budget Volumes</relationshipLabel>
        <relationshipName>ASI_NPP_Budget_Volumes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>New Product / Promotion Budget Volume</label>
    <listViews>
        <fullName>SG_Budget_Volume</fullName>
        <columns>NAME</columns>
        <columns>ASI_NPP_Sub_Brand__c</columns>
        <columns>ASI_NPP_Inactive__c</columns>
        <columns>ASI_NPP_Fiscal_Year__c</columns>
        <columns>ASI_NPP_Budget_Volume__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_NPP_Budget_Volume__c.ASI_NPP_SG_Budget_Volume_Record_Type</value>
        </filters>
        <label>SG Budget Volume</label>
        <language>en_GB</language>
        <sharedTo>
            <group>ASI_NPP_SG_All_User</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SG_Budget_Volume_Active</fullName>
        <columns>NAME</columns>
        <columns>ASI_NPP_Sub_Brand__c</columns>
        <columns>ASI_NPP_Inactive__c</columns>
        <columns>ASI_NPP_Fiscal_Year__c</columns>
        <columns>ASI_NPP_Budget_Volume__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_NPP_Budget_Volume__c.ASI_NPP_SG_Budget_Volume_Record_Type</value>
        </filters>
        <filters>
            <field>ASI_NPP_Inactive__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>SG Budget Volume - Active</label>
        <language>en_GB</language>
        <sharedTo>
            <group>ASI_NPP_SG_All_User</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>BV-{0000000}</displayFormat>
        <label>Reference Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>New Product / Promotion Budget Volumes</pluralLabel>
    <recordTypes>
        <fullName>ASI_NPP_SG_Budget_Volume_Record_Type</fullName>
        <active>true</active>
        <label>SG Budget Volume</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>